[package]
name = "dslx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
nom_locate = "4.2.0"
num-bigint = "0.4.4"
num-traits = "0.2.17" # This is just for testing... make it a build flag or something?
